raw/AISLAM AZ ZAHARA NIQUITA 6435 245150207111057/2024-11-14-10-52-22.ceg/compilation.txt
NT.java:39: error: illegal start of expression
    private static void output(double hasil) {
    ^
1 error
Not compiled
